[gd_scene load_steps=6 format=2]

[ext_resource path="res://icons/icon_edit.svg" type="Texture" id=1]
[ext_resource path="res://addons/AnimationEditorPlugin/ExtraGui/ExtraGui1.theme" type="Theme" id=2]
[ext_resource path="res://addons/AnimationEditorPlugin/TrackMeta.gd" type="Script" id=3]
[ext_resource path="res://icons/icon_remove.svg" type="Texture" id=4]
[ext_resource path="res://addons/AnimationEditorPlugin/ExtraGui/OpacityButton.gd" type="Script" id=5]

[node name="Control" type="Control"]
anchor_right = 1.0
rect_min_size = Vector2( 0, 36 )
rect_pivot_offset = Vector2( -478, -234 )
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_bottom = 1.0
margin_right = 2560.0
margin_bottom = -4.0
rect_min_size = Vector2( 0, 36 )
mouse_filter = 2
size_flags_horizontal = 3
theme = ExtResource( 2 )
color = Color( 0.14902, 0.172549, 0.231373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToolButton" type="TextureButton" parent="."]
modulate = Color( 1, 1, 1, 0.35 )
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 6.0
margin_top = -13.0
margin_right = -43.0
margin_bottom = 11.0
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 4
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupPanel" type="PopupPanel" parent="ToolButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 690.0
margin_bottom = 430.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 36.0
margin_top = -18.0
margin_right = 145.0
margin_bottom = 17.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Track Name"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 145.0
margin_right = 155.0
margin_bottom = 35.0
rect_min_size = Vector2( 10, 35 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resizeHandle" type="ColorRect" parent="."]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -10.0
margin_right = 2560.0
rect_min_size = Vector2( 0, 10 )
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureButton" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -28.0
margin_top = -11.0
margin_right = -7.0
margin_bottom = 11.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RemoveTrackButton" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0.35 )
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -34.0
margin_top = -18.0
margin_bottom = 18.0
hint_tooltip = "Remove track"
flat = true
expand_icon = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="RemoveTrackButton"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -9.0
margin_right = -9.0
margin_bottom = 7.0
mouse_filter = 2
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ToolButton" to="." method="_on_ToolButton_pressed"]
[connection signal="pressed" from="RemoveTrackButton" to="." method="_on_RemoveTrackButton_pressed"]
